static/css/style.css
html{
    position: relative;
    min-height:100%;
}

body{
    height:100%;
    /* background-image: url("images/triangles.png"); */
    /* background-repeat:repeat; */
    /* background-attachment: fixed; */
    font-family: 'Skyhook Mono', monospace;
    /* reserve margin for footer */
    margin-bottom: 50px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Skyhook Mono', monospace;
}

div pre {
    background-color: inherit;
    font-family: inherit;
}

/* my own css classes */

.command-line {

}

.main{
    /*background-color: #040404;*/
    min-height:100%;
    /* background-color: #f5f5fc; */
    /* border-radius: 10px; */
    /* padding-bottom: 40px; */
    /* padding-top: 30px; */
    margin-bottom: 60px;
}

.wally {
    float: left;
    padding-right: 4%;
}

.grvtext {
    padding-top: 25px;
}

.brand-symbol {
    font-size: 120%;
    font-weight: bold;
    animation: colorchange 30s; /* animation-name followed by duration in seconds*/
    /* you could also use milliseconds (ms) or something like 2.5s */
    -webkit-animation: colorchange 30s; /* Chrome and Safari */
    -moz-animation: colorchange 30s; /* Chrome and Safari */
    -o-animation: colorchange 30s; /* Chrome and Safari */

    animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-iteration-count: infinite;
    -o-animation-iteration-count: infinite;
}

@keyframes colorchange
{
    0%  {color: yellow;}
    25%   {color: orange;}
    50%  {color: red;}
    75%   {color: orange;}
    100%  {color: yellow;}
}

@-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
{
    0%  {color: yellow;}
    25%   {color: orange;}
    50%  {color: red;}
    75%   {color: orange;}
    100%  {color: yellow;}
}

@-moz-keyframes colorchange /* Safari and Chrome - necessary duplicate */
{
    0%  {color: yellow;}
    25%   {color: orange;}
    50%  {color: red;}
    75%   {color: orange;}
    100%  {color: yellow;}
}

@-o-keyframes colorchange /* Safari and Chrome - necessary duplicate */
{
    0%  {color: yellow;}
    25%   {color: orange;}
    50%  {color: red;}
    75%   {color: orange;}
    100%  {color: yellow;}
}

/* overriding bootstrap and typed css classes */

.nav > .inactive > a {
    transition: ease 1s;
    border-style: outset;
    border-width: 2px;
    color: orange;
}

.nav > .active > a {
    -webkit-transition: ease 1s;
    -moz-transition: ease 1s;
    -o-transition: ease 1s;
    transition: ease 1s;
    color: #2f4;
}

.nav > .active > a:hover {
    color: #2f4;
    border-style: inset;
    border-width: 2px;
    border-color: orange
}

.lead {
    font-size: 120%;
}

.footer {
    position: absolute;
    bottom: 0px;
    height: 50px;
    width: 100%;
    padding-bottom: 5px;
}


.page-header {
    border-bottom: 0px;
}

td a {
    text-decoration: none;
}

a {
    -webkit-transition: color ease 1s;
    -moz-transition: color ease 1s;
    -o-transition: color ease 1s;
    transition: color ease 1s;
    color: orange;
}

a:hover {
    color: #2f4;
    text-decoration: none;
}

.nav > li > a {
    -webkit-transition: ease 1s;
    -moz-transition: ease 1s;
    -o-transition: ease 1s;
    transition: ease 1s;
    border-style: outset;
    border-width: 2px;
    border-color: #222;
}

.nav > li > a:hover {
    background-color: inherit;
    border-style: inset;
    border-width: 2px;
    border-color: orange;
}

table a:not(.btn), .table a:not(.btn) {
    text-decoration: none;
}

.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    -o-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}

@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

